Fixed code alignment.

--- a/base.css
+++ b/base.css
@@ -22,6 +22,7 @@ header > h1 {
 code {
 	font: var(--font-monospace, monospace);
 	tab-size: 2;
+	text-align: right;
 }
 math,
 .mjx-chtml {
